# result

./: .cmake-format  .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yaml
.github/workflows/: build.yml  deploy.yaml  test.yml
cmake/: CPM.cmake  FindCatch2.cmake  Findgoogletest.cmake  Format.cmake
docs/: Doxyfile  api_docs.rst  conf.py  index.rst  license.rst
docs/api_docs/: result.rst  result_of.rst  utils.rst
docs/api_docs/utilities/: error.rst  error_stream.rst  ok.rst
docs/api_documentation/: index.rst  result.rst  result_of.rst  utils.rst
docs/api_documentation/utilities/: error.rst  error_stream.rst
include/result/: err.hpp  ok.hpp  result.hpp  result.ipp  result_of.hpp  result_or.hpp
include/result/internal/: err.hpp  err_msg.hpp  error.hpp  ok.hpp
test/: code_test.cpp  err_test.cpp  result_of_test.cpp  result_or_test.cpp  result_test.cpp
